--- a/1217_02/1217_02/1217_02.vcxproj.filters
+++ b/1217_02/1217_02/1217_02.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="show.c">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="save.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="studentdata.h">
